--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,10 @@
 name: Auto Fix and Test
 
 on:
-      branches: [ main ]
-  pull_request:
-    branches: [ main ]
+  push:                   
+    branches: [ main ]     
+  pull_request:           
+    branches: [ main ]    
 
 jobs:
   build:
